--- a/chat-guru-demo/src/components/chat/chat.module.scss
+++ b/chat-guru-demo/src/components/chat/chat.module.scss
@@ -62,3 +62,13 @@
   width: 36px;
   background-color: rgb(229, 227, 227);
 }
+
+.loadingWrapper {
+  @include flexCenter;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(0,0,0,0.5);
+  position: absolute;
+  top: 0;
+  z-index: 5
+}
