--- a/chat-guru-demo/src/components/chat/chat.module.scss
+++ b/chat-guru-demo/src/components/chat/chat.module.scss
@@ -65,8 +65,10 @@
 
 .loadingWrapper {
   @include flexCenter;
-  height: 100vh;
-  width: 100vw;
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+  min-width: 100vw;
   background-color: rgba(0,0,0,0.5);
   position: absolute;
   top: 0;
